# clock_mechanism_device

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  clock_mechanism_device.c
main/esp-now_protocol/: esp-now_protocol.c  esp-now_protocol.h
main/temperature_sensor/: temperature_sensor.c  temperature_sensor.h
